# dial9-tokio-telemetry

./: AGENTS.md  ANALYSIS.md  Cargo.toml
.github/actions/rust-build/: action.yml
.github/workflows/: stress-test.yml
dial9-tokio-telemetry/: Cargo.toml  README.md
dial9-tokio-telemetry/examples/: multi_runtime.rs  telemetry_rotating.rs  thread_per_core.rs  trace_to_fat_jsonl.rs
dial9-tokio-telemetry/src/: metrics.rs  traced.rs
dial9-tokio-telemetry/src/background_task/: mod.rs  s3.rs  sealed.rs
dial9-tokio-telemetry/src/telemetry/: analysis.rs  buffer.rs  events.rs  format.rs  mod.rs  writer.rs
dial9-tokio-telemetry/src/telemetry/recorder/: event_writer.rs  flush_state.rs  mod.rs  runtime_context.rs  shared_state.rs
dial9-tokio-telemetry/tests/: background_symbolization.rs  common.rs  cpu_sample_clock_alignment.rs  end_to_end.rs  js_parser.rs  sched_clock_alignment.rs  sched_events.rs  validation.rs
dial9-tokio-telemetry/trace_viewer/: index.html  trace_parser.js
dial9-trace-format/: Cargo.toml  README.md
dial9-trace-format-derive/: Cargo.toml
dial9-trace-format-derive/src/: lib.rs
dial9-trace-format-derive/src/snapshots/: dial9_trace_format_derive__tests__all_field_types.snap  dial9_trace_format_derive__tests__empty_event.snap  dial9_trace_format_derive__tests__simple_event.snap  dial9_trace_format_derive__tests__timestamp_attribute.snap
dial9-trace-format/examples/: format_comparison.rs
dial9-trace-format/fuzz/fuzz_targets/: fuzz_round_trip.rs  fuzz_structured_round_trip.rs
dial9-trace-format/src/: decoder.rs  encoder.rs  lib.rs  schema.rs  types.rs
dial9-trace-format/tests/: derive_round_trip.rs  js_parser.rs  round_trip.rs  spec_edge_cases.rs
examples/metrics-service/: Cargo.toml  README.md
examples/metrics-service/src/: main.rs
perf-self-profile/: Cargo.toml
perf-self-profile/src/: lib.rs  offline_symbolize.rs  sampler.rs  tracepoint.rs
perf-self-profile/tests/: multithread.rs  sched_triggers.rs  tracepoint_e2e.rs
scripts/: check-docsrs.sh
