[workspace]
resolver = "3"
members = [
    "dial9-tokio-telemetry",
    "dial9-trace-format",
    "dial9-trace-format-derive",
    "perf-self-profile",
    "examples/metrics-service",
]
exclude = [
    "dial9-trace-format/fuzz",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dial9-rs/dial9-tokio-telemetry"

[workspace.dependencies]
libc = "0.2"
dial9-perf-self-profile = { version = "0.1.1", path = "perf-self-profile" }
dial9-trace-format = { path = "dial9-trace-format", version = "0.1.1" }
dial9-trace-format-derive = { path = "dial9-trace-format-derive", version = "0.1.1" }
assert2 = "0.4"

[profile.release]
debug = 1
