[package]
name = "dial9-tokio-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
readme = "README.md"
description = "Low-overhead runtime telemetry for Tokio with poll timing, wake events, and CPU profiling"
keywords = ["tokio", "telemetry", "profiling", "async", "tracing"]
categories = ["asynchronous", "development-tools::profiling"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable", "-C", "force-frame-pointers=yes"]
all-features = true

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-util = "0.7"
arc-swap = "1"
libc.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
dial9-perf-self-profile = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, features = ["serde"] }
tracing = "0.1.44"
hostname = "0.4"
bon = "3"
aws-sdk-s3-transfer-manager = { version = "0.1.3", optional = true, default-features = false }
aws-sdk-s3 = { version = "1", default-features = false, optional = true, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
aws-config = { version = "1", optional = true, default-features = false }
flate2 = { version = "1" }
time = { version = "0.3", features = ["formatting", "macros"], optional = true }
metrique-writer = "0.1"
metrique = { version = "0.1.20", features = ["local-format"] }

[features]
cpu-profiling = ["dep:dial9-perf-self-profile"]
task-dump = ["tokio/taskdump"]
worker-s3 = ["dep:aws-sdk-s3-transfer-manager", "dep:aws-sdk-s3", "dep:aws-config", "dep:time"]

[dev-dependencies]
assert2 = { workspace = true }
criterion = "0.5"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
metrique-writer = { version = "0.1", features = ["test-util"] }
proptest = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
s3s = "0.13.0"
s3s-fs = "0.13.0"
s3s-aws = "0.13.0"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
async-trait = "0.1.89"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
dial9-tokio-telemetry = { path = ".", features = ["cpu-profiling", "worker-s3"] }

[[bench]]
name = "poll_overhead"
harness = false
required-features = ["task-dump"]

[[bench]]
name = "overhead_bench"
harness = false

[[example]]
name = "long_sleep"
required-features = ["task-dump"]

[[example]]
name = "completing_task"
required-features = ["task-dump"]

[[example]]
name = "cancelled_task"
required-features = ["task-dump"]

[[example]]
name = "debug_timing"
required-features = ["task-dump"]

[[example]]
name = "blocking_sleep"
required-features = ["cpu-profiling"]

[[example]]
name = "cpu_profile_workload"
required-features = ["cpu-profiling"]

[[example]]
name = "s3_stress_test"
required-features = ["worker-s3"]

[[example]]
name = "kernel_sched_events"
required-features = ["cpu-profiling"]
