[package]
name = "dial9-trace-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-describing binary trace format with schema registry"
publish = false

[features]
serde = ["dep:serde"]

[dependencies]
dial9-trace-format-derive = { workspace = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1"

[[bench]]
name = "codec"
harness = false
