[package]
name = "metrics-service"
edition = "2024"
version = "0.1.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
axum-core = "0.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower = "0.5"
tower-service = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dial9-tokio-telemetry = { path = "../../dial9-tokio-telemetry", features = ["worker-s3"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dial9-tokio-telemetry = { path = "../../dial9-tokio-telemetry", features = ["cpu-profiling", "worker-s3"] }
